2004-08-09  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Codecs/Bach.cpp, Atlas/Codecs/Bach.h, Atlas/Codecs/Packed.cpp,
	  Atlas/Codecs/Packed.h, Atlas/Codecs/XML.cpp, Atlas/Codecs/XML.h,
	  Atlas/Net/Stream.cpp, Atlas/Net/Stream.h, Atlas/Objects/BaseObject.h,
	  Atlas/Objects/loadDefaults.cpp, Atlas/Utilities/atlas_convert.cpp,
	  tests/Objects/objects2.cpp: Convert pointer to decode Bridge
	  in codecs and negotiation code to a reference for cleaner looking
	  code.

2004-08-06  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Bridge.h, Atlas/Exception.cpp, Atlas/Exception.h:
	  Move virtual method implementation into the body.

	* Atlas/Task.h: Mark class as obsolete.

	* Atlas/Net/Stream.h: Quick comment about the purpose of these
	  classes.

	* Atlas/Objects/BaseObject.cpp, Atlas/Objects/BaseObject.h:
	  Move virtual functions into the body, and stop trying to
	  inline them.

	* Atlas/Objects/GenerateDispatcher.py: Clean up the generated
	  dispatcher class.

	* Atlas/Objects/gen_cpp.py: Remove some debugging output from the
	  code generation process.

2004-07-31  Al Riddoch  <alriddoch@zepler.org>

	* Update NEWS and README.

	* Release 0.5.90.

2004-07-31  Al Riddoch  <alriddoch@zepler.org>

	* Increment version to 0.5.90.

2004-07-31  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Objects/gen_cpp.py: Clear extra attributes of objects in pool
	  when the object is reused.

2004-07-16  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Exception.h: Implement what() from base exception class, to
	  allow description to be queried.

2004-07-08  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Objects/BaseObject.h: Don't use friend on class definitions
	  as its forbidden in gcc 3.4.1.

2004-06-06  Al Riddoch  <alriddoch@zepler.org>

	* Fix devel dependencies in rpm spec.

2004-05-11  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Objects/GenerateObjectFactory.py: Modify factory so behavoir
	  for unknown objects is less confusing.
